@@ -13,8 +13,9 @@ https://github.com/ojii/django-better-test/archive/8aa2407d097fe3789b74682f0e6bd
 https://github.com/ojii/django-app-manage/archive/65da18ef234a4e985710c2c0ec760023695b40fe.zip#egg=django-app-manage
 iptools
 sphinx==1.8.5
-sphinxcontrib-spelling<7.0.0 # restriction for py35 tests
-pyflakes==1.1.0
+jinja2==3.0.3 # next release incompatible with pinned sphinx version
+sphinxcontrib-spelling
+pyflakes==1.4.0
 pyenchant
 # required to run the server for integration tests
 djangocms-helper
