@@ -1,5 +1,7 @@
 
 === 4.0.0 (unreleased) ===
+* Backported from develop-4: feat: Added live-url querystring parameter option for PageContent edit and
+  preview endpoints.
 * Backported from develop-4: Upgrade Gulp and NodeJs
 * Backported from develop-4: feat: Re-enable showing the toolbar to anonymous users
 * Allow Pagecontent.limit_visibility_in_menu to be reset once it has been set
